using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
 {
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string isJumping = "isJumping";
    internal static string isE_Jump = "isE_Jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string Attack_1 = "Attack_1";
    internal static string Attack_2 = "Attack_2";
    internal static string Attack_3 = "Attack_3";
    internal static string SpAttack = "SpAttack";
    internal static string E_Attack_1 = "E_Attack_1";
    internal static string E_Attack_2 = "E_Attack_2";
    internal static string E_Attack_3 = "E_Attack_3";
    internal static string E_SpAttack = "E_SpAttack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string lockVelocity = "lockVelocity";
    internal static string hitTrigger = "hit";
    internal static string isHit = "isHit";
    internal static string attackCooldown = "attackCooldown";
    internal static string Transform = "Transform";
    internal static string isTransform = "isTransform";
    internal static string isGodMod = "isGodMod";
    internal static string isBack2Human = "isBack2Human";
 }
